--- a/style.css
+++ b/style.css
@@ -2,11 +2,15 @@
     margin: 0;
     padding: 0;
 }
+body{
+    background-color: rgb(247, 250, 252);
+}
 
 /* This is nav bar */
 .nav-container{
     display: flex;
     justify-content: space-between;
+    background-color: antiquewhite;
 }
 
 /* logo and brand name work......... */
@@ -30,15 +34,78 @@ img{
 .child-list ul{
     display: flex;
     gap:40px;
-    margin-top: 20px;
+    margin-top: 30px;
     margin-right: 30px;
+
 }
 
 .child-list ul li{
     list-style: none;
-    font-size:21px;
+    font-size:21px;border: 2px solid rgb(116, 97, 97);
+    padding: 5px;
+    border-radius: 10px;
+}
+
+.child-list ul  :hover{
+    background-color: black;
+    color: rgb(252, 246, 246);
+    transform: scale(1.2);
+    box-shadow: rgb(255, 255, 255) 1px 2px 5px;
+
 }
 
 .child-list ul li a{
     text-decoration:none;
+    color:rgb(141, 58, 27);
 }
+
+/* ..........Hover work closed....................
+................................................... */
+.body-container{
+    display: flex;
+    justify-content: space-between;
+}
+h3{
+    font-size: 35px;
+    margin-left: 255px;
+    margin-top: 50px;
+}
+.first-p{
+    margin-right: 32px;
+    margin-top: 220px;
+    border: 1px solid rgb(146, 137, 137);
+    border-radius: 20px;
+    padding: 5px;
+    height: 250px;
+    width: 1000px;
+
+}
+.first-p :hover{
+    background-color: antiquewhite;
+    border: 5px solid black;
+    border-radius: 20px;
+     height: 250px;
+      width: 1000px;
+       padding: 3px;
+       box-shadow: 2px 5px 20px;
+}
+.first-p p{
+     font-size: 26px;
+}
+
+
+
+/* ................................. */
+.body-container .first-img .img1{
+    width:490px;
+    margin-top: 150px;
+    margin-left: 150px;
+}
+
+.first-img :hover{
+    transform: scale(1.08);
+   
+}
+
+/* .........................
+.................................. */
